projects/planet_four/project.styl
.planet-four-subject-viewer
  position: relative
  
  .large-mouseover
    display: none
    position: absolute
    top: 0
    left: 103%
    width: 200%
    min-width: 722px
    height: 100%
    min-height: 272px
    background-repeat: no-repeat
    border: 1px solid #000000
    box-sizing: border-box
    z-index: 100
    
  .subject-metadata
    text-align: right
    padding-bottom: 5px
    
    a
      color: $gray
      font-size: 11px

